Fixed bug: svg not showing in chromium browsers

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html {
   width: 100%;
   height: 100%;
   text-align: center;
+  overflow: auto;
 }
 
 
@@ -372,11 +373,17 @@ footer{
   border-radius: 50%;
 }
 
+.rocket-container{
+  position: fixed;
+  top: 80%;
+  left: 80%;
+}
+
 #rocket-button-color, #rocket-button-launch{
-  max-height: 4rem;
+  height: 4rem;
   position: fixed;
   top: 85%;
-  left: 90%;
+  left: 85%;
 }
 
 #rocket-button-launch{
@@ -396,7 +403,7 @@ footer{
   .txt-type:after {
     height: 3rem;
   }
-  
+
   .exp-img-container{
     min-height: 8rem;
     box-sizing: content-box;
@@ -428,4 +435,14 @@ footer{
   .pf-header{
     background-attachment: fixed;
   }
+  
+  .rocket-container{
+    left: 90%;
+  }
+  
+  #rocket-button-color, #rocket-button-launch{
+    top: 90%;
+    left: 90%;
+  }
+
 }
